--- a/doom/home.css
+++ b/doom/home.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
 }
 /*navegação*/
 .navbar{
@@ -65,13 +65,31 @@ body{
 .nav-links li a:hover {
     color: rgb(240, 240, 240);
 }
+.imagem1{
+    position: relative;
+}
 .imgamostra{
     width: 100%;
     height: 700px;
+    display: block;
 }
 .imgamostra1{
     width: 100%;
     height: 700px;
+}
+.botaoflutuante {
+    width: 300px;
+    height: 70px;
+    position: absolute;
+    top: 270px;    /* distância do topo */
+    left: 200px;  /* distância da direita */
+    padding: 10px 15px;
+    background-color: #020202;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    font-size: 28px;
 }
 .meu-video{
     width: 100%;
@@ -121,9 +139,14 @@ body{
     overflow-x: auto;
     scroll-behavior: smooth;
     padding: 10px 0;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer e Edge antigos */
+}
+.boxs-promo::-webkit-scrollbar {
+    display: none; /* Chrome, Safari e Edge */
 }
 .box-promo {
-    background-color: #424242;
+    background-color: #c4c4c4;
     border-radius: 30px;
     height: 300px;
     width: 280px;
@@ -178,6 +201,21 @@ body{
 .produtos1{
     display: flex;
     justify-content: center;
+}
+.todosprodutos{
+    display: flex;
+    justify-content: center;
+}
+.todosprodutos1{
+    font-family: 'Segoe UI', sans-serif;
+    height: 40px;
+    width: 300px;
+    border-radius: 30px;
+    border: none;
+    background-color: #333;
+    color: white;
+    font-size: 18px;
+
 }
 .footer{
     background-color: #333;
