--- a/doom/home.css
+++ b/doom/home.css
@@ -70,13 +70,14 @@ body{
 }
 .imgamostra{
     width: 100%;
-    height: 700px;
+    height: auto;
     display: block;
 }
 .imgamostra1{
     width: 100%;
     height: 700px;
 }
+/*pesquisei no chat para adicionar o botão flutante*/
 .botaoflutuante {
     width: 300px;
     height: 70px;
@@ -134,11 +135,12 @@ body{
 }
 .boxs-promo {
     display: flex;
-    gap: 5px;
+    gap: 7px;
     transition: scroll-left 0.3s;
     overflow-x: auto;
     scroll-behavior: smooth;
     padding: 10px 0;
+    /*pesquisei no chat para remover a barra de scroll*/
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* Internet Explorer e Edge antigos */
 }
@@ -146,11 +148,17 @@ body{
     display: none; /* Chrome, Safari e Edge */
 }
 .box-promo {
+    display: flex;
+    justify-content: center;
     background-color: #c4c4c4;
     border-radius: 30px;
     height: 300px;
     width: 280px;
     flex: 0 0 auto;
+    transition: transform 0.3s ease; 
+}
+.box-promo:hover {
+  transform: scale(1.03); 
 }
 .carousel-container button {
     background-color: rgba(0, 0, 0, 0.5);
@@ -255,6 +263,9 @@ body{
     text-decoration: none;
     color: white;
     margin-bottom: 8px;
+}
+.footer-col ul li a:hover{
+    color: black;
 }
 .social-icons img{
     color: white;
